// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppOwner > createAppOwner 1`] = `
{
  "encryptionKey": Uint8Array [
    173,
    165,
    204,
    225,
    74,
    240,
    76,
    99,
    46,
    18,
    104,
    4,
    0,
    136,
    188,
    132,
    99,
    57,
    151,
    4,
    147,
    44,
    59,
    91,
    61,
    162,
    116,
    243,
    186,
    98,
    25,
    4,
  ],
  "id": "MdVYFAxShUluuZKVWQfYL",
  "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
  "type": "AppOwner",
  "writeKey": Uint8Array [
    111,
    64,
    118,
    108,
    245,
    65,
    176,
    98,
    173,
    247,
    85,
    78,
    30,
    167,
    192,
    203,
  ],
}
`;

exports[`Owner creation functions > createOwner 1`] = `
{
  "encryptionKey": Uint8Array [
    173,
    165,
    204,
    225,
    74,
    240,
    76,
    99,
    46,
    18,
    104,
    4,
    0,
    136,
    188,
    132,
    99,
    57,
    151,
    4,
    147,
    44,
    59,
    91,
    61,
    162,
    116,
    243,
    186,
    98,
    25,
    4,
  ],
  "id": "MdVYFAxShUluuZKVWQfYL",
  "writeKey": Uint8Array [
    111,
    64,
    118,
    108,
    245,
    65,
    176,
    98,
    173,
    247,
    85,
    78,
    30,
    167,
    192,
    203,
  ],
}
`;

exports[`Owner creation functions > createOwnerFromMnemonicSeed 1`] = `
{
  "encryptionKey": Uint8Array [
    173,
    165,
    204,
    225,
    74,
    240,
    76,
    99,
    46,
    18,
    104,
    4,
    0,
    136,
    188,
    132,
    99,
    57,
    151,
    4,
    147,
    44,
    59,
    91,
    61,
    162,
    116,
    243,
    186,
    98,
    25,
    4,
  ],
  "id": "MdVYFAxShUluuZKVWQfYL",
  "writeKey": Uint8Array [
    111,
    64,
    118,
    108,
    245,
    65,
    176,
    98,
    173,
    247,
    85,
    78,
    30,
    167,
    192,
    203,
  ],
}
`;

exports[`Owner creation functions > createWriteKey 1`] = `
Uint8Array [
  32,
  99,
  101,
  230,
  222,
  46,
  149,
  166,
  144,
  165,
  217,
  240,
  14,
  24,
  40,
  8,
]
`;

exports[`ShardOwner > createShardOwner 1`] = `
{
  "encryptionKey": Uint8Array [
    28,
    67,
    45,
    145,
    79,
    93,
    53,
    62,
    164,
    39,
    100,
    244,
    132,
    168,
    75,
    241,
    15,
    6,
    103,
    167,
    160,
    52,
    100,
    173,
    7,
    249,
    135,
    5,
    185,
    18,
    190,
    183,
  ],
  "id": "0Dib7NJOfObgwabbw5knm",
  "type": "ShardOwner",
  "writeKey": Uint8Array [
    158,
    136,
    10,
    147,
    163,
    127,
    229,
    228,
    145,
    17,
    188,
    84,
    249,
    219,
    72,
    230,
  ],
}
`;

exports[`SharedOwner > createSharedOwner 1`] = `
{
  "encryptionKey": Uint8Array [
    173,
    165,
    204,
    225,
    74,
    240,
    76,
    99,
    46,
    18,
    104,
    4,
    0,
    136,
    188,
    132,
    99,
    57,
    151,
    4,
    147,
    44,
    59,
    91,
    61,
    162,
    116,
    243,
    186,
    98,
    25,
    4,
  ],
  "id": "MdVYFAxShUluuZKVWQfYL",
  "mnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
  "type": "SharedOwner",
  "writeKey": Uint8Array [
    111,
    64,
    118,
    108,
    245,
    65,
    176,
    98,
    173,
    247,
    85,
    78,
    30,
    167,
    192,
    203,
  ],
}
`;

exports[`SharedReadonlyOwner > createSharedReadonlyOwner 1`] = `
{
  "encryptionKey": Uint8Array [
    173,
    165,
    204,
    225,
    74,
    240,
    76,
    99,
    46,
    18,
    104,
    4,
    0,
    136,
    188,
    132,
    99,
    57,
    151,
    4,
    147,
    44,
    59,
    91,
    61,
    162,
    116,
    243,
    186,
    98,
    25,
    4,
  ],
  "id": "MdVYFAxShUluuZKVWQfYL",
  "type": "SharedReadonlyOwner",
}
`;
